--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -5,5 +5,11 @@
     color: #fff;
     border: 0;
     border-radius: 8px;
-    
+    cursor: pointer;
+    transition: background-color 0.4s;
+
+
+    &:hover {
+        background-color: rgb(31, 111, 161);
+    }
 }
