--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,16 +1,16 @@
 .header {
-    padding: 30px;
+	padding: 30px;
 }
-
 
 .title {
 	display: inline-block;
 	font-size: 40px;
 	text-transform: uppercase;
+	text-align: center;
 }
 
 .icon {
-    margin-left: 20px;
+	margin-left: 20px;
 	font-size: 40px;
 	color: rgb(204, 175, 8);
 }
